# QtPlugin

./: .cirrus.yml  .gitignore  .gitmodules  CMakeLists.txt  README  README.md  hintsettings.cpp  hintsettings.h  main.cpp  pandaplatformtheme.cpp  pandaplatformtheme.h  stylesheet.qss  x11integration.cpp
debian/: changelog  control
panda-qt5-style/: CMakeLists.txt  blurhelper.cpp  blurhelper.h  buttonhelper.cpp  global.h  menuhelper.cpp  modernstyle.cpp  modernstyle.h  pstyleplugin.cpp  pstyleplugin.h  pstyleplugin.json  scrollbarhelper.cpp  style.cpp  style.h  styleanimation.cpp  styleanimation.h  stylehelper.h  styleutils.cpp  tabbarhelper.cpp
platformthemeplugin/: CMakeLists.txt  hintsettings.cpp  hintsettings.h  main.cpp  panda.json  pandaplatformtheme.cpp  pandaplatformtheme.h  qdbusmenubar.cpp  x11integration.cpp
style-plugin/: CMakeLists.txt  basestyle.cpp  basestyle.h  blurhelper.cpp  blurhelper.h  boxshadowrenderer.cpp  boxshadowrenderer.h  modernstyle.cpp  modernstyle.h  shadowhelper.cpp  shadowhelper.h  tileset.cpp  tileset.h
styleplugin/: CMakeLists.txt  basestyle.cpp  basestyle.h  pstyleplugin.cpp  pstyleplugin.json  sound.cpp  sound.h
